Fix alignment issues

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -51,6 +51,9 @@ body {
     font-weight: bold;
     font-style: italic;
 }
+.table {
+    text-align: left;
+}
 
 /* Custom class for home page title font  */
 .home-page-title {
